src/test/ui/panic-handler/panic-handler-duplicate.stderr
error[E0152]: found duplicate lang item `panic_impl`
  --> $DIR/panic-handler-duplicate.rs:15:1
   |
LL | fn panic2(info: &PanicInfo) -> ! {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lang item is first defined here
  --> $DIR/panic-handler-duplicate.rs:10:1
   |
LL | fn panic(info: &PanicInfo) -> ! {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0152`.
